--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Copyright 2013 - The CyanogenMod Project
+Copyright 2013 - The AOKP Project
 
 Device configuration for Samsung Galaxy S4 (GT-I9500)
